Remove features and update application

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UoH GPA Calculator</title>
-    <meta name="description" content="University of Hyderabad GPA Calculator" />
-    <meta name="author" content="Students of Batch 2024 – AI Section A & B" />
+    <meta name="description" content="UoH GPA Calculator" />
+    <meta name="author" content="Created with ❤️ by Haris H" />
 
     <meta property="og:title" content="UoH GPA Calculator" />
-    <meta property="og:description" content="University of Hyderabad GPA Calculator" />
+    <meta property="og:description" content="UoH GPA Calculator" />
     <meta property="og:type" content="website" />
 
     <!-- Google Fonts -->
